--- a/Game Code/index.html
+++ b/Game Code/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html>
- <body>
-  <h1>Hello World</h1>
-  <p>I'm hosted with GitHub Pages.</p>
- </body>
-</html>
+<details>
+<summary>Example</summary>
+This is a dropdown with text!
+</details>
