--- a/index.html
+++ b/index.html
@@ -4,4 +4,8 @@
   <h1>Hello World</h1>
   <p>I'm hosted with GitHub Pages.</p>
  </body>
+ <details>
+ <summary>Example</summary>
+ This is a dropdown with text!
+ </details>
 </html>
